--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-    "name": "expressrestapi",
-    "version": "0.0.1-beta",
-    "description": "an example REST API",
+
+    "name": "DNSAutoSwitcher",
+    "version": "1.0.0",
+    "description": "Express App to periodically update DNS mapping",
+    "author": "github.com/KyMann",
     "main": "src/index.js",
     "scripts": {
+        "install": "npm install",
         "start": "node dist/index.js",
         "build": "./node_modules/.bin/babel src --out-dir dist --copy-files",
         "test": "rm -rf dist && jest --coverage --collectCoverageFrom=src/**/*.js && cp -r src dist && babel src -d dist"
@@ -13,8 +16,8 @@
         "type": "git",
         "url": "https://github.com/KyMann/ExpressRestAPI"
     },
-    "author": "Kyle Mann",
     "license": "MIT",
+    
     "dependencies": {
         "@babel/cli": "^7.13.14",
         "@babel/core": "^7.13.14",
@@ -30,4 +33,5 @@
         "node": "^18.14.0",
         "npm": "^6.0.0"
     }
+    
 }
