--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-syntax-import-meta": "^7.10.4",
         "@babel/preset-env": "^7.13.12",
+
         "express": "^4.17.1",
-        "mongodb": "^3.6.5",
         "nock": "^13.0.11",
-        "winston": "^3.3.3"
+        "winston": "^3.3.3",
+        "fetch-retry": "5.0.6"
     },
     "engines": {
         "node": "^18.14.0",
         "npm": "^6.0.0"
     }
-    
+
 }
